Adding Playlist service. Adding My Playlist page to add and rename playlists. Updated the Nav bar.

--- a/public/project/index.html
+++ b/public/project/index.html
@@ -20,6 +20,7 @@
     <script src="view/user/login.controller.js"></script>
     <script src="view/user/profile.controller.js"></script>
     <script src="view/search/search.controller.js"></script>
+    <script src="view/playlist/myplaylist.controller.js"></script>
 
     <!-- Client Services -->
     <script src="services/user.service.client.js"></script>
