Adding Playlist functions - Add, update, delete. Adding song functions - Add, remove (Playlist specific). Song search through spotify api and Song details fetched through spotify api.

--- a/public/project/index.html
+++ b/public/project/index.html
@@ -21,10 +21,12 @@
     <script src="view/user/profile.controller.js"></script>
     <script src="view/search/search.controller.js"></script>
     <script src="view/playlist/myplaylist.controller.js"></script>
+    <script src="view/playlist/editplaylist.controller.js"></script>
 
     <!-- Client Services -->
     <script src="services/user.service.client.js"></script>
     <script src="services/playlist.service.client.js"></script>
+    <script src="services/song.service.client.js"></script>
 
     <!-- Theme related stylesheets and scripts -->
     <link href="https://bootswatch.com/assets/css/custom.min.css" rel="stylesheet">
