Adding new user registration functionality. Fixing adding songs to a newly created playlist.

--- a/public/project/index.html
+++ b/public/project/index.html
@@ -22,6 +22,7 @@
     <script src="view/search/search.controller.js"></script>
     <script src="view/playlist/myplaylist.controller.js"></script>
     <script src="view/playlist/editplaylist.controller.js"></script>
+    <script src="view/user/register.controller.js"></script>
 
     <!-- Client Services -->
     <script src="services/user.service.client.js"></script>
@@ -32,6 +33,7 @@
     <link href="https://bootswatch.com/assets/css/custom.min.css" rel="stylesheet">
     <link href="https://bootswatch.com/cyborg/bootstrap.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+
     <!-- Including Font Awesome for glyphicons http://fontawesome.io/ -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
