Adding CRUD for users via Admin page. Updating search to user regular expression.

--- a/public/project/index.html
+++ b/public/project/index.html
@@ -23,6 +23,8 @@
     <script src="view/playlist/myplaylist.controller.js"></script>
     <script src="view/playlist/editplaylist.controller.js"></script>
     <script src="view/user/register.controller.js"></script>
+    <script src="view/admin/admin.controller.js"></script>
+
 
     <!-- Client Services -->
     <script src="services/user.service.client.js"></script>
