Updating Landing page.

--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,9 @@
                     </div>
                 </div>
                 <div class="col-xs-6 col-lg-6">
-                    <h2>Personal Project</h2>
+                    <h2>Projects</h2>
+                    <p>Currently working on a project titled "Music Social". A social collaboration platform for music.</p>
+                    <p><a class="btn btn-default" href="../project" role="button" target="_blank">Go to MusicSocial &raquo;</a></p>
                     <p> As part of the Creative design and website development team of TEDxMasterCanteenSquare, we created an interactive desktop website using jQuery. </p>
                     <p><a class="btn btn-default" href="http://tedxmcs-adityaghosh.rhcloud.com/" role="button" target="_blank">Go to TEDxMCS &raquo;</a></p>
                 </div>
