--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
-                <li><a href="../assignment/index.html">Assignments</a></li>
+                <li><a href="../assignment/client/index.html">Assignments</a></li>
                 <li><a href="../experiments/index.html">Experiments</a></li>
                 <li><a href="https://docs.google.com/document/d/1kYC5uNZ6V7gJsAE-lStp5Bqs4d9AdjHKD72f4bLPPmE/edit?usp=sharing">Project Document</a></li>
                 <li><a href="../project/index.html">Project</a></li>
@@ -88,7 +88,7 @@
                     <h2>CS5610 Spring 2016</h2>
                     <div class="list-group">
                         <a href="../experiments" class="list-group-item">Experiments &raquo;</a>
-                        <a href="../assignment" class="list-group-item">Assignment &raquo;</a>
+                        <a href="../assignment/client/" class="list-group-item">Assignment &raquo;</a>
                         <a href="https://docs.google.com/document/d/1kYC5uNZ6V7gJsAE-lStp5Bqs4d9AdjHKD72f4bLPPmE/edit?usp=sharing" class="list-group-item">Project Document &raquo;</a>
                         <a href="../project" class="list-group-item">Project &raquo;</a>
                     </div>
