Adding routing configuration for fields. Add fields to form functionality added. Initial dragging fields implemented. Added field delete functionality. Fixing field server model to provide expected data.

--- a/public/assignment/client/index.html
+++ b/public/assignment/client/index.html
@@ -9,6 +9,9 @@
     <link rel="icon" href="img/favicon.ico">
 
     <title>Form Maker</title>
+    <!--<script src="https://code.jquery.com/jquery-1.10.2.js"></script>-->
+
+
 
     <!-- Bootstrap core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
@@ -29,10 +32,12 @@
     <script src="views/users/profile.controller.js"></script>
     <script src="views/users/login.controller.js"></script>
     <script src="views/forms/forms.controller.js"></script>
+    <script src="views/forms/fields.controller.js"></script>
 
     <!-- Services-->
     <script src="services/user.service.client.js"></script>
     <script src="services/forms.service.client.js"></script>
+    <script src="services/field.service.client.js"></script>
 
 
     <!-- Custom styles for this template -->
@@ -62,6 +67,7 @@
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </body>
 </html>
