Drag functionality completed. Adding function to update all fields for a form in the model to remember order after dragging. Added modal to update fields. Fixed user login.

--- a/public/assignment/client/index.html
+++ b/public/assignment/client/index.html
@@ -9,8 +9,9 @@
     <link rel="icon" href="img/favicon.ico">
 
     <title>Form Maker</title>
-    <!--<script src="https://code.jquery.com/jquery-1.10.2.js"></script>-->
 
+    <!--Adding Jquery-ui css-->
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 
 
     <!-- Bootstrap core CSS -->
