Refactoring existing code to client folder.

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
                 <li><a href="../assignment/client/index.html">Assignments</a></li>
                 <li><a href="../experiments/index.html">Experiments</a></li>
                 <li><a href="https://docs.google.com/document/d/1kYC5uNZ6V7gJsAE-lStp5Bqs4d9AdjHKD72f4bLPPmE/edit?usp=sharing">Project Document</a></li>
-                <li><a href="../project/index.html">Project</a></li>
+                <li><a href="../project/client/index.html">Project</a></li>
             </ul>
         </div>
     </div>
@@ -90,7 +90,7 @@
                         <a href="../experiments" class="list-group-item">Experiments &raquo;</a>
                         <a href="../assignment/client/" class="list-group-item">Assignment &raquo;</a>
                         <a href="https://docs.google.com/document/d/1kYC5uNZ6V7gJsAE-lStp5Bqs4d9AdjHKD72f4bLPPmE/edit?usp=sharing" class="list-group-item">Project Document &raquo;</a>
-                        <a href="../project" class="list-group-item">Project &raquo;</a>
+                        <a href="../project/client/" class="list-group-item">Project &raquo;</a>
                     </div>
                 </div>
                 <div class="col-xs-6 col-lg-6">
