Adding socket.io as a dependency to enable chatting. Adding an experiment to create a global chat.

--- a/public/experiments/index.html
+++ b/public/experiments/index.html
@@ -14,6 +14,7 @@
         <a class="list-group-item" href="spotify_search_track.html">Trying out Spotify API</a>
         <a href="angular/index.html" class="list-group-item">Angular Static Add/Remove Movie</a>
         <a href="angular/omdb/index.html" class="list-group-item">Angular Route/Search Movie</a>
+        <a href="chatApp/client/index.html" class="list-group-item">Chat Application</a>
     </div>
 </div>
 </body>
