Updating server to redirect to /project/client if request comes to /project.

--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
                         for.</h5>
                     <h6>-Milton Glaser</h6>
                 </blockquote>
-                <h5>Hi there, my name is Aditya Ghosh. I’m currently pursuing a Master’s of Science degree in Computer Science at Northeastern University.</h5>
+                <h5>I’m currently pursuing a Master’s of Science degree in Computer Science at Northeastern University.</h5>
                 <h5>I have 2 years of work experience at Tata Consultancy Services, as a Software Engineer.
                 My major role in the company was to develop and maintain a web application for a client using my skills in ASP.NET, MSSQL and JavaScript.
                 I took on a secondary role of Analysis and resolution of data misrepresentation, where I got an in depth knowledge about my project’s database structure. Further I learnt about performance tuning by optimizing joins. I used this technique to optimize over 20 Stored Procedures during my tenure in the company.
