Adding player when selecting playlist.

--- a/public/project/client/index.html
+++ b/public/project/client/index.html
@@ -24,6 +24,7 @@
     <script src="view/playlist/editplaylist.controller.js"></script>
     <script src="view/user/register.controller.js"></script>
     <script src="view/admin/admin.controller.js"></script>
+    <script src="view/musicplayer/musicplayer.controller.js"></script>
 
 
     <!-- Client Services -->
