--- a/public/assignment/client/index.html
+++ b/public/assignment/client/index.html
@@ -34,6 +34,7 @@
     <script src="views/users/login.controller.js"></script>
     <script src="views/forms/forms.controller.js"></script>
     <script src="views/forms/fields.controller.js"></script>
+    <script src="views/admin/admin.controller.js"></script>
 
     <!-- Services-->
     <script src="services/user.service.client.js"></script>
