Adding project demo link on home page

--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,7 @@
                 <li><a href="../experiments/index.html">Experiments</a></li>
                 <li><a href="https://docs.google.com/document/d/1kYC5uNZ6V7gJsAE-lStp5Bqs4d9AdjHKD72f4bLPPmE/edit?usp=sharing">Project Document</a></li>
                 <li><a href="../project/client/index.html">Project</a></li>
+                <li><a href="https://youtu.be/-d_GFY--eic" target="_blank">Project Demo</a></li>
             </ul>
         </div>
     </div>
@@ -81,6 +82,7 @@
                 </h5>
                 <h5>
                 Currently I'm building responsive web application using the MEAN stack. Check my <a href="https://docs.google.com/document/d/1kYC5uNZ6V7gJsAE-lStp5Bqs4d9AdjHKD72f4bLPPmE/edit?usp=sharing" target="_blank">Project Documentation</a> for a brief overview of the application.
+                You can also view my project demo on youtube <a href="https://youtu.be/-d_GFY--eic">here</a>.
                 </h5>
             </div>
             <div class="row">
@@ -91,6 +93,7 @@
                         <a href="../assignment/client/" class="list-group-item">Assignment &raquo;</a>
                         <a href="https://docs.google.com/document/d/1kYC5uNZ6V7gJsAE-lStp5Bqs4d9AdjHKD72f4bLPPmE/edit?usp=sharing" class="list-group-item">Project Document &raquo;</a>
                         <a href="../project/client/" class="list-group-item">Project &raquo;</a>
+                        <a href="https://youtu.be/-d_GFY--eic" target="_blank" class="list-group-item">Project Demo&raquo;</a>
                     </div>
                 </div>
                 <div class="col-xs-6 col-lg-6">
