--- a/public/index.html
+++ b/public/index.html
@@ -4,126 +4,110 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <!--<link rel="icon" href="../../favicon.ico">-->
+    <meta name="description" content="Portfolio for Aditya Ghosh">
+    <meta name="author" content="Aditya Ghosh">
 
-    <title>Home</title>
+    <title>Aditya Ghosh</title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="experiments/css/offcanvas.css" rel="stylesheet">
+    <link href="assets/css/main.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
 </head>
 
 <body>
-<nav class="navbar navbar-fixed-top navbar-inverse">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                    aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Landing Page</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="../assignment/client/index.html">Assignments</a></li>
-                <li><a href="../experiments/index.html">Experiments</a></li>
-                <li><a href="https://docs.google.com/document/d/1kYC5uNZ6V7gJsAE-lStp5Bqs4d9AdjHKD72f4bLPPmE/edit?usp=sharing">Project Document</a></li>
-                <li><a href="../project/client/index.html">Project</a></li>
-                <li><a href="https://youtu.be/-d_GFY--eic" target="_blank">Project Demo</a></li>
-            </ul>
-        </div>
-    </div>
-</nav>
 
-<div class="container">
-
-    <div class="row row-offcanvas row-offcanvas-right">
-
-        <div class="col-xs-12 col-sm-9">
-            <p class="pull-right visible-xs">
-                <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">Social</button>
-            </p>
-            <div class="jumbotron">
-                <div class="row">
-                    <div class="col-md-2 col-sm-3 col-xs-3">
-                        <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAWAAAAAJGJjMzAzMGYwLWEzNTktNGUyNy1iYmUzLWVkMmEwMDQwMjMwNw.jpg"
-                             alt="_blank" class="img-profile-pic img-circle"/>
-                    </div>
-                    <div class="col-md-10 col-sm-9 col-xs-9 text-left">
-                        <h2>Aditya Ghosh</h2>
-                    </div>
-
-                </div>
-
-                <blockquote>
-                    <h5>There are three responses to a piece of design – yes, no, and WOW! Wow is the one to aim
-                        for.</h5>
-                    <h6>-Milton Glaser</h6>
-                </blockquote>
-                <h5>I’m currently pursuing a Master’s of Science degree in Computer Science at Northeastern University.</h5>
-                <h5>I have 2 years of work experience at Tata Consultancy Services, as a Software Engineer.
-                My major role in the company was to develop and maintain a web application for a client using my skills in ASP.NET, MSSQL and JavaScript.
-                I took on a secondary role of Analysis and resolution of data misrepresentation, where I got an in depth knowledge about my project’s database structure. Further I learnt about performance tuning by optimizing joins. I used this technique to optimize over 20 Stored Procedures during my tenure in the company.
-                </h5>
-                <h5>
-                Currently I'm building responsive web application using the MEAN stack. Check my <a href="https://docs.google.com/document/d/1kYC5uNZ6V7gJsAE-lStp5Bqs4d9AdjHKD72f4bLPPmE/edit?usp=sharing" target="_blank">Project Documentation</a> for a brief overview of the application.
-                You can also view my project demo on youtube <a href="https://youtu.be/-d_GFY--eic">here</a>.
-                </h5>
-            </div>
-            <div class="row">
-                <div class="col-xs-6 col-lg-6">
-                    <h2>CS5610 Spring 2016</h2>
-                    <div class="list-group">
-                        <a href="../experiments" class="list-group-item">Experiments &raquo;</a>
-                        <a href="../assignment/client/" class="list-group-item">Assignment &raquo;</a>
-                        <a href="https://docs.google.com/document/d/1kYC5uNZ6V7gJsAE-lStp5Bqs4d9AdjHKD72f4bLPPmE/edit?usp=sharing" class="list-group-item">Project Document &raquo;</a>
-                        <a href="../project/client/" class="list-group-item">Project &raquo;</a>
-                        <a href="https://youtu.be/-d_GFY--eic" target="_blank" class="list-group-item">Project Demo&raquo;</a>
-                    </div>
-                </div>
-                <div class="col-xs-6 col-lg-6">
-                    <h2>Projects</h2>
-                    <p>Currently working on a project titled "Music Social". A social collaboration platform for music.</p>
-                    <p><a class="btn btn-default" href="../project" role="button" target="_blank">Go to MusicSocial &raquo;</a></p>
-                    <p> As part of the Creative design and website development team of TEDxMasterCanteenSquare, we created an interactive desktop website using jQuery. </p>
-                    <p><a class="btn btn-default" href="http://tedxmcs-adityaghosh.rhcloud.com/" role="button" target="_blank">Go to TEDxMCS &raquo;</a></p>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
-            <div class="list-group">
-                <a href="https://github.com/adityaghosh" class="list-group-item" target="_blank">Github</a>
-                <a href="https://www.linkedin.com/in/aditya-ghosh-2885b4b2" class="list-group-item" target="_blank">LinkedIn</a>
-                <a href="https://www.facebook.com/adityag23" class="list-group-item" target="_blank">Facebook</a>
-            </div>
-        </div>
-    </div>
-
-    <hr>
+<div class="nav">
+    <a href="#hero" class="scroll">section one</a>
+    <a href="#work" class="scroll">section two</a>
+    <a href="#networks" class="scroll">section three</a>
 </div>
 
+<section id="hero">
+    <div class="hero-block">
+        <img class="img-circle" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAWAAAAAJGJjMzAzMGYwLWEzNTktNGUyNy1iYmUzLWVkMmEwMDQwMjMwNw.jpg" width="150" height="150">
+        <p>
+            <br>Hello, I'm Aditya, a curious and creative software developer.<br/>
+            I spend my time experimenting with various libraries and API's available for JavaScript, Python and C.<br/>
+            Currently exploring various  JavaScript technologies to build user friendly and mobile first applications.<br/>
+            To know more about me you can visit my online portfolio <a href="resume/index.html" target="_blank">here</a> <br/>
+        </p>
+    </div>
+    <a href="#work" class="scroll hidden-xs"><span class="down-arrow"></span></a>
+</section>
+
+<section id="work">
+
+    <div class="hero-block">
+        <a href="#hero" class="scroll hidden-xs"><span class="up-arrow"></span></a>
+        <br/>
+        <br/>
+        <h2>CS5610: Web Development - Course Work</h2><br/>
+        <dl>
+            <dt><a href="assignment/client/index.html" target="_blank">Assignments</a></dt>
+            <dd>Link to the FormMaker Application.</dd>
+            <dt>
+                <a href="experiments/index.html" target="_blank">Experiments</a>
+            </dt>
+            <dd>
+                All experiments done during the course.
+            </dd>
+            <dt>
+                <a href="https://docs.google.com/document/d/1kYC5uNZ6V7gJsAE-lStp5Bqs4d9AdjHKD72f4bLPPmE/edit?usp=sharing" target="_blank">Project Document</a>
+            </dt>
+            <dd>
+                Google Doc for the proposed project.
+            </dd>
+            <dt>
+                <a href="project/client/index.html" target="_blank">Project</a>
+            </dt>
+            <dd>
+                Link to the Music Social Application.
+            </dd>
+            <dt>
+                <a href="https://youtu.be/-d_GFY--eic" target="_blank">Project Demo</a>
+            </dt>
+            <dd>
+                Link to a youtube video explaining the project.
+            </dd>
+        </dl>
+    </div>
+    <a href="#networks" class="scroll hidden-xs"><span class="down-arrow"></span></a>
+</section>
+
+<section id="networks">
+    <a href="#work" class="scroll hidden-xs"><span class="up-arrow"></span></a>
+    <div class="hero-block">
+        <p>
+            <a href="https://www.facebook.com/adityag23" target="_blank"><i class="facebook fa fa-facebook"></i></a>
+            <a href="https://twitter.com/adityag2" target="_blank"><i class="twitter fa fa-twitter"></i></a>
+            <a href="https://www.linkedin.com/in/aditya-ghosh-2885b4b2" target="_blank"><i class="linkedin fa fa-linkedin"></i></a>
+        </p>
+        <p>
+            <a href="mailto:ghosh.ad@husky.neu.edu"><span class="mail fa fa-envelope"></span>&nbsp;ghosh.ad@husky.neu.edu</a>
+        </p>
+        <p>
+            <a href="tel:857.316.7915"><span class="tel fa fa-phone"></span>&nbsp;857.316.7915</a>
+        </p>
+    </div>
+</section>
 
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>-->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-<script src="experiments/js/offcanvas.js"></script>
+
+<script src="assets/js/scroll.js"></script>
+
 </body>
 </html>
